# QMess

./: .gitignore  CMakeLists.txt  LICENSE
DesktopClient/: DesktopClient.pro  DesktopClient.pro.user.3b47088.21  DesktopClient.pro.user.d0607fa.4.8-pre1  cachedmessagehistory.cpp  cachedmessagehistory.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  datastorage.cpp  datastorage.h  eventmessageprocessor.cpp  eventmessageprocessor.h  loginwindow.h  loginwindow.ui  main.cpp  todo  windowcontroller.cpp  windowcontroller.h
DesktopClient/images/: imagesresource.qrc
DesktopQmlClient/: CMakeLists.txt  DesktopQmlClient.pro  main.cpp  main.qml  messagesmodel.h  qml.qrc  user.cpp  user.h  usermodel.cpp  usermodel.h
DesktopQmlClient/Processors/: eventmessageprocessor.cpp  eventmessageprocessor.h
DesktopQmlClient/QmlViews/: ChatWindowView.qml  InputFieldAttachmentButtonView.qml  InputFieldSendMessageButtonView.qml  InputFieldVoiceMessageButtonView.qml  LoginConfirmButton.qml  LoginSignInTabContentView.qml  LoginSignUpTabContentView.qml  LoginStatusBarView.qml  LoginView.qml  MessagesInputFieldButtonsView.qml  MessagesInputFieldView.qml  MessagesStatusBarButtonsView.qml  MessagesView.qml  SearchFieldView.qml  UserListStatusBarView.qml  UserListView.qml
DesktopQmlClient/ViewModels/: messagesmodel.cpp  messagesmodel.h  messageview.cpp  messageview.h  user.cpp  user.h  usermodel.cpp  usermodel.h
DesktopQmlClient/Windows/: chatwindow.cpp  chatwindow.h  loginwindow.h  windowcontroller.cpp  windowcontroller.h
DesktopQmlClient/src/: qml.qrc
DesktopQmlClient/src/Processors/: datastorage.cpp  datastorage.h  eventmessageprocessor.cpp  eventmessageprocessor.h
DesktopQmlClient/src/QmlViews/: ChatWindowView.qml  InputFieldSmilesButtonView.qml  LoginInputField.qml  LoginMenuTabButton.qml  LoginSignInTabContentView.qml  LoginSignUpTabContentView.qml  MessagesInputFieldButtonsView.qml  MessagesStatusBarButtonsView.qml  MessagesStatusBarView.qml  MessagesView.qml  UserListStatusBarView.qml
DesktopQmlClient/src/ViewModels/: messageview.h  user.cpp  user.h  usermodel.cpp
DesktopQmlClient/src/Windows/: chatwindow.cpp  chatwindow.h  loginwindow.cpp  windowcontroller.cpp
Server/: .gitignore  CMakeLists.txt  Server.pro  main.cpp  message.h  serverrunner.cpp  serverrunner.h  sessionclient.cpp  sessionclient.h
Server/Data/: datasrorage.cpp  datasrorage.h
Server/DataProviders/: idataprovider.h  mockdataprovider.cpp  mockdataprovider.h
Server/Handlers/: eventhandler.cpp  eventhandler.h
Server/QRunable/: connectionhandler.cpp  connectionhandler.h  disconnectionhandler.cpp  disconnectionhandler.h  runnabledirector.cpp  runnabledirector.h  setupuserhandler.cpp  setupuserhandler.h
Server/src/: main.cpp  serverrunner.cpp  serverrunner.h  sessionclient.cpp  sessionclient.h
Server/src/Commands/: CommandAdapter.cpp  CommandAdapter.h  ICommand.h  IWorker.h  SetupUserCommand.cpp  SetupUserCommand.h  SyncWorker.cpp  SyncWorker.h
Server/src/DataProviders/: idataprovider.cpp  idataprovider.h  mockdataprovider.cpp  mockdataprovider.h
Server/src/Handlers/: eventhandler.cpp  eventhandler.h
Server/src/QRunable/: connectionhandler.cpp  connectionhandler.h  disconnectionhandler.cpp  disconnectionhandler.h  runnabledirector.cpp  runnabledirector.h
build-DesktopQmlClient-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-DesktopQmlClient-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/debug/: qrc_qml.cpp
libModel/: CMakeLists.txt  example.xml  libModel.pro  libmodel.cpp  libmodel.h  models.cpp  models.h  tcpdataprovider.cpp  tcpdataprovider.h  tcpdefines.h  xmlparser.cpp  xmlparser.h
libModel/include/: modelsAPI.h  tcpdataproviderAPI.h  tcpdefinesAPI.h
libModel/src/: iencryptor.h  models.cpp  models.h  tcpdataprovider.cpp  tcpdataprovider.h  tcpdefines.h
